# pi-bot

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bot.py  docker-compose.yaml  env.py  prod.Dockerfile  requirements.txt
.github/workflows/: build.yml  ci.yml
.sqlx/: query-1af207ceedb4a22a239cf50ff035a344c1758bfae88dff7be42bcce70c3f75ad.json  query-1f1fa238bd6b29146ffb7cd30453001eca53d0c623008394f9a321ea4e0fc461.json  query-553c2875d1e4f171ff1d1339f1383c83eb987a6d0cf9606b9bc364d20fdf810c.json  query-621d339a6b8b22110c93ca8842f992e0928b370914ffa207a8c51c2d88ba3a56.json  query-69a21b2f09b27ba689f3199d03558438379dc7963bb9bd243e7afab71fa13a75.json  query-73b2578eb42aa05606e7e7b75a83db97b64c7a32505c7101c743707512d59e64.json  query-77bd97a7a80fc7270137389fc47d69d05f979d3db0930d89e13a50dc53d9adf6.json  query-9a0ef314e56e1f42072d9b9f0a4ec1f2de0f21523e2e7a20076cd9b7c2cbb93d.json  query-b4130cccfcd81efa3433f55d19b71de44344bb8416cf18d79fe3f90924e28f18.json  query-bf28988529f76d913a4a779d3f4a0b3978d3fa043f8cf0fa5845a10a48f3c514.json  query-c989e85012e89aa8452194214aa5dec405182c7ce87a8b5bbf12da84ade33d6d.json  query-cc8e196bb8e564779b82f3fcfbb300d66b1d0a2d34a976bc68c84107572849f7.json  query-d04a10b0d8a006023995cbe23d183b94363ea584e7b3669a872b3a7e8c5c80b7.json
common/: Cargo.toml
common/src/: env.rs  lib.rs
migrations/: 20250819210945_re2_pings.py  20250921003943_add_authorization_tables.sql  20250922023530_initial_event_table.sql  20250923021255_scioly_user_stats_table.sql
pi-bot/: Cargo.toml  Dockerfile  build.rs
pi-bot/src/: main.rs  version.rs
pi-bot/src/discord/: utils.rs
pi-bot/src/discord/commands/: auth.rs  censor.rs  event.rs  fun.rs  general.rs  mod.rs  staff.rs
src/: docker_secrets.rs
src/discord/: censor.py  embed.py  globals.py  logger.py  membercommands.py  mod.rs  ping.py  reporter.py  rolerestore.py  spam.py  staffcommands.py  utils.rs
src/discord/commands/: mod.rs  sync.rs
src/discord/staff/: events.py  invitationals.py  usercleanup.py
src/mongo/: models.py
src/wiki/: wiki.py
web-server/: .dockerignore  Cargo.toml  Dockerfile
web-server/src/: main.rs
