[workspace]
resolver = "3"
members = ["pi-bot", "web-server"]

[workspace.dependencies]
dotenv = "0.15.0"
envy = "0.4.2"
log = { version = "0.4.27", features = ["max_level_debug", "release_max_level_info"] }
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "next", version = "0.6.1" }
poise_macros = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next", version = "0.12.4" }
simple_logger = "5.0.0"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
