[workspace]
resolver = "3"
members = [ "common", "pi-bot", "web-server" ]

[workspace.dependencies]
dotenv = "0.15.0"
envy = "0.4.2"
log = { version = "0.4.27", features = ["max_level_debug", "release_max_level_info"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
simple_logger = "5.0.0"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
test-case = "3.3.1"
