[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
common = { path = "../common/" }
dotenv = { workspace = true }
env_logger = "0.11.8"
envy = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["mysql", "runtime-tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
